force-app/main/default/objects/leave_application__c/leave_application__c.object-meta.xml
<CustomObject>
    <label>leave application</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>leave number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>leave applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>