force-app/main/default/objects/leave_application__c/fields/Approve_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_Reason__c</fullName>
    <label>Approve-Reject Reason</label>
    <type>TextArea</type>
</CustomField>