force-app/main/default/objects/leave_application__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>