force-app/main/default/objects/leave_application__c/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Privilege</fullName>
            </value>
            <value>
                <fullName>Optional</fullName>
            </value>
            <value>
                <fullName>Leave without pay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>