force-app/main/default/objects/leave_application__c/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <formula>( To_Date__c  -  From_Date__c )+1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>