force-app/main/default/objects/leave_application__c/recordTypes/Leave_application_Tem.recordType-meta.xml
<RecordType>
    <fullName>Leave_application_Tem</fullName>
    <active>true</active>
    <label>Leave application-Temporary</label>
</RecordType>