force-app/main/default/objects/leave_application__c/recordTypes/Leave_application_Temporary.recordType-meta.xml
<RecordType>
    <fullName>Leave_application_Temporary</fullName>
    <active>true</active>
    <label>Leave application-Permanent</label>
</RecordType>