force-app/main/default/objects/leave_application__c/recordTypes/leave_application_traineer.recordType-meta.xml
<RecordType>
    <fullName>leave_application_traineer</fullName>
    <active>true</active>
    <label>leave application- traineer</label>
</RecordType>