force-app/main/default/objects/leave_application__c/validationRules/Applied_leaves_not_more_avaliable_leave.validationRule-meta.xml
<ValidationRule>
    <fullName>Applied_leaves_not_more_avaliable_leave</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_days__c  &gt;  Employee__r.Balance_Leaves__c</errorConditionFormula>
    <errorMessage>Applied leaves cannot be more than total available leaves</errorMessage>
</ValidationRule>