force-app/main/default/objects/leave_application__c/validationRules/To_date_not_less_than_From_date.validationRule-meta.xml
<ValidationRule>
    <fullName>To_date_not_less_than_From_date</fullName>
    <active>true</active>
    <errorConditionFormula>To_Date__c  &lt;  From_Date__c</errorConditionFormula>
    <errorMessage>To date cannot be less than From date</errorMessage>
</ValidationRule>